# illume

./: README.md  pyproject.toml  requirements.txt
ILLUME/: app.py  app_hf.py
ILLUME/generation_eval/: main.py
ILLUME/generation_eval/generation_dataset/: DefaultDataset.py  EditingSingleTurnDataset.py  __init__.py  builder.py  meta_dataset_config.py
ILLUME/generation_eval/models/: __init__.py  builder.py  illume.py  inference_utils.py
ILLUME/illume/: conversation.py  dist_utils.py  mm_utils.py  registry_utils.py  utils.py
ILLUME/illume/data/: aspect_ratio_utils.py  data_utils.py  dataset.py  preprocess.py
ILLUME/illume/model/: __init__.py  builder.py  illume_arch.py  utils.py
ILLUME/illume/train/: illume_trainer.py  logger.py  train.py
ILLUME/scripts/: inference_image_editing.sh  inference_text_to_image.sh  prepare_llm_with_extended_vision_tokenizer.py
assets/docs/: Data.md
configs/_base_/models/: qwen2_5_dualencoder.py
configs/_base_/training/: default.py
configs/data_configs/: examples_meta_data_config.json
configs/example/dualvitok/: dualvitok_fix256.py  (+1 more)
vision_tokenizer/: app.py
vision_tokenizer/dataset/: build.py  folder.py  multi_ratio_dataset.py
vision_tokenizer/evaluations/: __init__.py  pytorch_fid.py
vision_tokenizer/scripts/: read_folder_image_sizes.py  zero2.json  zero3.json
vision_tokenizer/tokenizer/: __init__.py  builder.py  discriminator_dino.py  dualvitok_model.py  quantizer.py  reconstruction_vq_ddp.py  scheduler.py  sdxl_decoder_pipe.py  tokenizer_codebook_inference.py  train_dualvitok.py  vq_loss.py
vision_tokenizer/utils/: ema.py  logger.py  registry_utils.py  sampler.py
(+39 files in other folders)
